--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,17 @@ services:
       - ~/.ssh:/root/.ssh
       - ~/.bash_history:/root/.bash_history
       - &bundle-cache-volume bundle_cache:/bundle_cache
+      - database:/db
+      # - /db
     ports:
       - 3000:3000
     environment: &web-environment
       BUNDLE_PATH: /bundle_cache
       GEM_HOME: /bundle_cache
       GEM_PATH: /bundle_cache
-      RAILS_PORT: 3000
-      RUBYOPT: -W:no-deprecated -W:no-experimental
-    command: bundle exec rails s -b '0.0.0.0' -p 3000
+      APP_VERSION: 1.1
+    command: bash -c "bin/rails db:create && bin/rails db:migrate && bundle exec rails s -b '0.0.0.0' -p 3000"
 
 volumes:
   bundle_cache:
+  database:
