--- a/docker-compose.uffizzi_custom_port.yml
+++ b/docker-compose.uffizzi_custom_port.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   web:
-    image: image: zipofar/uffizzi_test_rails_simple:latest
+    image: zipofar/uffizzi_test_rails_simple:latest
     environment:
       APP_VERSION: 1.4
       RAILS_ENV: production
