--- a/sub-docker-compose-files/docker-compose.uffizzi_multy_svc.yml
+++ b/sub-docker-compose-files/docker-compose.uffizzi_multy_svc.yml
@@ -20,7 +20,7 @@ services:
           memory: 1000M
     command: ["bash", "-c", "bin/rails db:create && bin/rails db:migrate && bundle exec rails s -b '0.0.0.0' -p 3000"]
     volumes:
-      - ./public_db:/public_db
+      - ./:/public_db
       - ./config:/app/config
 
   subweb:
@@ -37,7 +37,7 @@ services:
           memory: 1000M
     command: ["bash", "-c", "bin/rails db:create && bin/rails db:migrate && bundle exec rails s -b '0.0.0.0' -p 4000"]
     volumes:
-      - ./public_db:/public_db
+      - ./:/public_db
       - ./config:/app/config
 
 volumes:
